--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 :root {
+  --overview-width: unset;
   --scrollbar-width: 15px;
 }
 
